# ArxGen

./: .dockerignore  Dockerfile  README.md  pyproject.toml
src/arxgen/: crew.py  main.py
src/arxgen/config/: tasks.yaml
src/arxgen/style/: style.css
src/arxrate/config/: agents.yaml  tasks.yaml
