[project]
name = "arxgen"
version = "0.1.0"
description = "Veille scientifique automatisée via l'API ArXiv"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.28.0",
    "crewai[tools]>=0.28.0",
    "arxiv>=2.1.3",
    "python-dotenv>=1.0.1",
    "pydantic>=2.0.0",
    "PyYAML>=6.0.1",
    "langchain-ollama>=1.0.1",
    "langchain-community>=0.0.30",
    "litellm>=1.44.0",
    "openai~=1.83.0",
]